k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-svc
spec:
  selector:
    app: flask-api
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
