k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
    app.kubernetes.io/part-of: k8s-multiservice-lab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: redis
